--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -26,7 +26,7 @@
                 {% if user.is_authenticated %}
                 <li>
                     <a class = "btn btn-link" href="#">{{user.username}}</a>
-                    <a class = "btn btn-link" href="#">Logout</a>
+                    <a class = "btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
                     <a class = "btn btn-link" href="{% url 'djangoapp:about' %}">About us.</a>
                 </li>
                 
@@ -38,7 +38,7 @@
                             <input type="text" class="form-control" placeholder="Username" name="username" >
                             <input type="password" class="form-control" placeholder="Password" name="psw" >
                             <button class="btn btn-primary" type="submit">Login</button>
-                            <a class="btn btn-link" href="{% url 'djangoappegistration' %}">Sign Up</a>
+                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
                             <a class = "btn btn-link" href="{% url 'djangoapp:about' %}">About us.</a>
                         </div>
                     </form>
